--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
   "author": "Tarek Taher",
   "license": "MIT",
   "dependencies": {
-    "vue": "^3.4.0"
+    "@vue/reactivity": "^3.5.13",
+    "vue": "^3.5.13"
   },
   "devDependencies": {
-    "typescript": "^4.0.0"
+    "@vue/runtime-core": "^3.5.13",
+    "typescript": "^5.7.2"
   },
   "files": [
     "dist"
